--- a/security_alert_user/default/data/ui/views/alert-management-dashboard.xml
+++ b/security_alert_user/default/data/ui/views/alert-management-dashboard.xml
@@ -1,4 +1,4 @@
-<form version="1.1">
+<form version="1.1" theme="dark">
   <label>Alert Management Dashboard</label>
   <description>Manage dynamically created alerts</description>
 
