--- a/security_alert_user/default/data/ui/views/data-explorer-dashboard.xml
+++ b/security_alert_user/default/data/ui/views/data-explorer-dashboard.xml
@@ -1,4 +1,4 @@
-<form version="1.1">
+<form version="1.1" theme="dark">
   <label>FortiGate Data Explorer (index=fw)</label>
   <description>Explore your FortiGate data and create dynamic alerts</description>
 
